2001-03-01  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* symbols.test:  New file.

	(exception:immutable-string):  New constant.  Currently, this is a
	dummy since guile does not have immutable strings.

	* exceptions.test, strings.test, symbols.test:  Moved the string
	related test cases from exceptions.test to strings.test and the
	symbol related test cases to symbols.test.

	* strings.test:  Copyright notice updated.  Added a couple of test
	cases.

	(exception:immutable-string):  New constant.  Currently, this is a
	dummy since guile does not have immutable strings.

2001-02-28  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* exceptions.test:  Use expect-fail-exception to indicate test
	cases where exceptions should occur, but don't.

	(exception:bad-bindings, exception:bad-formals, exception:bad-var,
	exception:missing/extra-expr):  New constants.

2001-02-28  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* reader.test, exceptions.test:  Moved the reader related test
	cases from exceptions.test to reader.test.

	* reader.test (exception:eof, exception:unexpected-rparen):  New
	constants.

	* exceptions.test (read-string, x:eof, x:unexpected-rparen):
	Removed.

2001-02-28  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* lib.scm (signals-error?, signals-error?*):  Removed.

2001-02-28  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* lib.scm:  Added comment about new convenience functions/macros
	to test for exceptions.

	(exception:out-of-range, exception:wrong-type-arg):  New exported
	constants.

	(run-test-exception):  New function.

	(pass-if-exception, expect-fail-exception):  New exported macros.

	* tests/environments.test:  Fixed tests that were checking for
	exceptions when set!ing an unbound symbol.

	(exception:unbound-symbol):  New constant.

	* tests/hooks.test (catch-error-returning-true, pass-if-not,
	catch-error-returning-false), tests/weaks.test
	(catch-error-returning-true, pass-if-not,
	catch-error-returning-false):  Removed.  The macro pass-if-not was 